@@ -920,8 +920,30 @@ bool Guardian::InitStatsForLevel(uint8 petlevel)
                     if (!pInfo)
                         SetCreateHealth(30 + 30*petlevel);
                     float bonusDmg = m_owner->SpellBaseDamageBonus(SPELL_SCHOOL_MASK_NATURE) * 0.15f;
-                    SetBaseWeaponDamage(BASE_ATTACK, MINDAMAGE, float(petlevel * 2.5f - (petlevel / 2) + bonusDmg));
-                    SetBaseWeaponDamage(BASE_ATTACK, MAXDAMAGE, float(petlevel * 2.5f + (petlevel / 2) + bonusDmg));
+                    float minDmg = float(petlevel * 2.5f - (petlevel / 2) + bonusDmg);
+                    float maxDmg = float(petlevel * 2.5f + (petlevel / 2) + bonusDmg);
+
+                    // Brambles rank 1
+                    if (m_owner->HasAura(16836))
+                    {
+                        minDmg *= 1.05f;
+                        maxDmg *= 1.05f;
+                    }
+                    // Brambles rank 2
+                    else if (m_owner->HasAura(16839))
+                    {
+                        minDmg *= 1.10f;
+                        maxDmg *= 1.10f;
+                    }
+                    // Brambles rank 3
+                    else if (m_owner->HasAura(16840))
+                    {
+                        minDmg *= 1.15f;
+                        maxDmg *= 1.15f;
+                    }
+
+                    SetBaseWeaponDamage(BASE_ATTACK, MINDAMAGE, minDmg);
+                    SetBaseWeaponDamage(BASE_ATTACK, MAXDAMAGE, maxDmg);
                     break;
                 }
                 case 15352: //earth elemental 36213
